# oop_nst_2_k_w

./: .dockerignore  .gitattributes  .gitignore  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  CMakePresets.json  CMakeTargetsView.json  Dockerfile  Doxyfile  King.cpp  King.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  czysty_kod.txt  docker-compose.yml  kNight.cpp  kNight.h  main.cpp  requirements.md  sfml_check.cpp  szachy  troubleshooting.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-publish.yml  release.yml
engine/: engine.h  evalpos.cpp  moves.cpp  moves.h  see.cpp  val.h
engine/logger/: logger.h
engine/tables/: TT.cpp  TT.h  zobrist.h
html/: _bishop_8h.html  _bishop_8h.js  _bishop_8h_source.html  _board_8cpp.html  _board_8h.html  _board_8h_source.html  _king_8cpp.html  _king_8h.html  _king_8h.js  _king_8h_source.html  _pawn_8cpp.html  _pawn_8h.html  _pawn_8h.js  _pawn_8h_source.html  _piece_8cpp.html  _piece_8h.html  _piece_8h.js  _piece_8h_source.html  _queen_8cpp.html  _queen_8h.html  _queen_8h.js  _queen_8h_source.html  _rook_8cpp.html  _rook_8h.html  _rook_8h.js  _rook_8h_source.html  _t_t_8h.html  _t_t_8h.js  _t_t_8h_source.html  annotated.html  annotated_dup.js  catch2_8cpp.html  catch2_8cpp.js  class_async_logger-members.html  class_async_logger.html  class_async_logger.js  class_bishop-members.html  class_bishop.html  class_bishop.js  class_board-members.html  (+98 more)
html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_c.js  (+47 more)
latex/: _bishop_8h.tex  _bishop_8h_source.tex  _board_8cpp.tex  _board_8h.tex  _board_8h_source.tex  _king_8cpp.tex  _king_8h.tex  _king_8h_source.tex  _pawn_8cpp.tex  _pawn_8h.tex  _pawn_8h_source.tex  _piece_8cpp.tex  _piece_8h.tex  _piece_8h_source.tex  _queen_8cpp.tex  _queen_8h.tex  _queen_8h_source.tex  _rook_8cpp.tex  _rook_8h.tex  _rook_8h_source.tex  _t_t_8h.tex  _t_t_8h_source.tex  annotated.tex  catch2_8cpp.tex  class_async_logger.tex  class_bishop.tex  class_board.tex  class_engine.tex  class_king.tex  class_knight.tex  class_pawn.tex  class_piece.tex  class_queen.tex  class_rook.tex  class_transposition_table.tex  coverage__tests_8cpp.tex  engine_8h.tex  engine_8h_source.tex  evalpos_8cpp.tex  evalpos_8cpp_source.tex  (+28 more)
migrations/: init.sql
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  kNight.cpp  kNight.h  main.cpp  sfml_check.cpp  test.cpp
src/components/: board.hpp  piece.hpp
src/engine/: deepcopy.h  engine.cpp  engine.h  evalpos.cpp  helpers.hpp  moves.cpp  moves.h  see.cpp  val.h
src/engine/logger/: logger.h
src/engine/tables/: TT.cpp  TT.h  zobrist.cpp  zobrist.h
src/structures/: board.hpp  moves.hpp
src/tests/: catch2.cpp  coverage_tests.cpp  test_engine.cpp  test_pieces.cpp
tests/: catch2.cpp  coverage_tests.cpp  test_engine.cpp  test_pieces.cpp
